# code-test

./: .gitignore  README.md  pyproject.toml  server.py
jobtrackr/: __init__.py  cli.py  db.py
static/: app.js  index.html  styles.css
tests/: test_jobtrackr.py
